fix signup btn contrast rate

--- a/src/components/common/splash/splash.scss
+++ b/src/components/common/splash/splash.scss
@@ -21,7 +21,7 @@
     bottom: 0;
     height: 90px;
     text-align: center;
-    background-color: #DF409A;
+    background-color: #6A1F9A;
     color: rgba(255,255,255,.9);
     font-size: 1.2em;
     text-decoration: none;
